# impulse

./: .env.example  .gitignore  README.md  eslint.config.mjs  index.html  next.config.ts  package.json  schema.sql
.github/workflows/: build-apps.yml  deploy.yml
capacitor/: capacitor.config.ts
css/: style.css
js/: app.js  config.js  db.js  icons.js
public/: sw.js
public/impulse/: manifest.webmanifest
sql/: fix-create-chat.sql  fix-recursion.sql  migration-v2.sql  schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx
src/components/impulse/: avatar.tsx  blocked-screen.tsx  messenger.tsx  providers.tsx  report-modal.tsx  setup-screen.tsx  sidebar.tsx  theme-provider.tsx
src/components/impulse/admin/: admin-panel.tsx
src/components/impulse/auth/: auth-screen.tsx
src/components/impulse/calls/: call-overlay.tsx
src/components/impulse/chat/: chat-area.tsx  chat-info-panel.tsx  emoji-data.ts  emoji-picker.tsx  empty-state.tsx  message-bubble.tsx  message-composer.tsx  message-list.tsx  typing-indicator.tsx
src/components/impulse/games/: game-2048.tsx  games-modal.tsx  guess-number.tsx  memory.tsx  tic-tac-toe.tsx  whack-a-mole.tsx
src/components/impulse/settings/: settings-modal.tsx
src/components/impulse/sidebar/: new-chat-modal.tsx
src/hooks/impulse/: use-auth-bootstrap.ts  use-offline.ts  use-realtime.ts
src/lib/: backend.ts  call-engine.ts  crypto.ts  format.ts  impulse.ts  supabase.ts
src/stores/: auth-store.ts  call-store.ts  chats-store.ts
src/types/: db.ts
