[package]
name = "impulse"
version = "1.0.0"
description = "Импульс — мессенджер"
authors = ["vanya8scripts"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
